--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "preact-htm-signals-standalone",
+  "name": "preact-aio",
   "version": "10.27.2",
   "description": "A single, standalone version of Preact, HTM and Preact Signals. No external dependencies, just one single file.",
   "type": "module",
@@ -11,9 +11,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/linfx7/preact-htm-signals-standalone.git"
+    "url": "git+https://github.com/linfx7/preact-aio.git"
   },
-  "homepage": "https://github.com/linfx7/preact-htm-signals-standalone",
+  "homepage": "https://github.com/linfx7/preact-aio",
   "keywords": [
     "preact signals",
     "signals",
